update: fix margins on mobile

--- a/public/css/work_grid.css
+++ b/public/css/work_grid.css
@@ -1,4 +1,5 @@
 .photo-grid {
+	-webkit-padding-start: 0px;
 	margin: 1em auto;
 	max-width: 1106px;
 	text-align: center;
